--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -1034,6 +1034,15 @@
                             // 새로운 데이터 추가
                             mqtt_data.push(incomingData);
                         }
+
+                         // 선택된 로봇의 데이터만 반영
+                        if (incomingData.topic_id === selectedRobotId) {
+                            const latitude = parseFloat(incomingData.data.fix_filtered_latitude) || 0;
+                            const longitude = parseFloat(incomingData.data.fix_filtered_longitude) || 0;
+
+                            // 선택된 로봇 마커 위치 업데이트
+                            updateMarkerPosition(selectedRobotId, latitude, longitude);
+                        }
                         console.log("Updated mqtt_data:", mqtt_data);
                     };
                     if (message.nav2_eta_paths){
@@ -3056,42 +3065,41 @@ ${waypointsYamlStr}
             // const heading = selectedNav2Data.heading || 0; // heading 값 가져오기
 
             // 지도 업데이트
-            updateMap(latitude, longitude, name, robotId, true);
+            updateMap(latitude, longitude, name);
 
             // 팝업 닫기
             closeRobotListPopup();
         }
 
         // 지도 업데이트 함수
-        function updateMap(latitude, longitude, name, robotId, moveMap = false) {
+        function updateMap(latitude, longitude, name) {
+            if (robotLayer) {
+                robotLayer.clearLayers(); // 기존 마커 초기화
+            }
 
+            const marker = L.marker([latitude, longitude]).addTo(robotLayer);
+            marker.bindPopup(`<strong>Robot:</strong> ${name}`).openPopup();
+
+            // 지도 중심 이동
+            map.setView([latitude, longitude], 17);
+        }
+
+        function updateMarkerPosition(robotId, latitude, longitude) {
             if (!robotLayer) {
                 console.error("Robot layer is not initialized!");
                 return;
             }
 
-           
-            robotLayer.clearLayers(); // 기존 마커 초기화
-           
-
             let marker = robotMarkers[robotId];
 
             if (marker) {
-                // 기존 마커의 위치 업데이트
+                // 기존 마커 위치 업데이트
                 marker.setLatLng([latitude, longitude]);
             } else {
                 // 새로운 마커 생성
                 marker = L.marker([latitude, longitude]).addTo(robotLayer);
-                marker.bindPopup(`<strong>Robot:</strong> ${name}`).openPopup();
                 robotMarkers[robotId] = marker; // 마커 저장
             }
-
-            // 선택된 로봇일 경우 지도 중심 이동
-            if (moveMap && selectedRobotId === robotId) {
-                map.setView([latitude, longitude], 17);
-            }
-
-
         }
 
         // 로봇의 상태를 시각화하는 함수
