--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -989,7 +989,7 @@
         let newRobotData = [];
         let mqtt_data = [];
         let nav2_data = [];
-        let selectedRobotID = null;
+        let selectedRobotId = null;
         const robotMarkers = {};
 
 
