--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -1088,7 +1088,7 @@
         }
 
 
-        let robotLayer;
+        let robotLayer, waypointLayer;
         let map; // 전역 변수로 선언
 
         function initializeMap(initialMapType = 'robot') {
