--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -1088,7 +1088,8 @@
         }
 
 
-        let robotLayer, waypointLayer;
+        let robotLayer = null;
+        let waypointLayer = null;
         let map; // 전역 변수로 선언
 
         function initializeMap(initialMapType = 'robot') {
