--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -3976,7 +3976,7 @@ ${waypointsYamlStr}
                     .from('Path')
                     .select('id, name')
                     .eq('robotId', robotId) // 로봇 ID에 해당하는 Path만 조회
-                    .order('name', { ascending: true });
+                    .order('id', { ascending: true });
 
                 if (error) {
                     console.error('Path 목록 조회 오류:', error);
@@ -4257,7 +4257,7 @@ ${waypointsYamlStr}
                     .from('Waypoint')
                     .select('id, latitude, longitude, name, type, yaw, color')
                     .eq('pathId', pathId)
-                    .order('name', { ascending: true }); // Name 기준 오름차순으로 정렬
+                    .order('id', { ascending: true }); // Name 기준 오름차순으로 정렬
 
                 if (error) {
                     console.error('Waypoint 데이터 조회 오류:', error);
@@ -4777,7 +4777,7 @@ ${waypointsYamlStr}
             const { data: waypoints, error } = await supabase.from('Waypoint')
                 .select('id, name')
                 .eq('pathId', pathId)
-                .order('name', { ascending: true });
+                .order('id', { ascending: true });
 
             if (error) {
                 console.error('Waypoint 순서 조정 오류:', error);
