--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -990,6 +990,7 @@
         let mqtt_data = [];
         let nav2_data = [];
         let selectedRobotId = null;
+        let selectedPathId = null;
         const robotMarkers = {};
         let robotname;
 
