--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -990,7 +990,7 @@
         let mqtt_data = [];
         let nav2_data = [];
         let selectedRobotId = null;
-        let selectedPathId = null;
+        let selectedPathId;
         const robotMarkers = {};
         let robotname;
 
