--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -2973,7 +2973,7 @@ ${waypointsYamlStr}
 
 
             
-            robotListPopup.appendChild(closebutton);
+            robotListPopup.appendChild(closeButton);
             // 팝업 보이기
             robotListPopup.style.display = 'block';
 
