--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -4259,6 +4259,19 @@ ${waypointsYamlStr}
                 }
 
                 console.log("전송할 WebSocket 데이터:", JSON.stringify(pathData, null, 2));
+
+                // ACK 처리 로직
+                // const ackPromise = new Promise((resolve, reject) => {
+                //     ackPromises.current.set(requestId, resolve);
+
+                //     setTimeout(() => {
+                //         if (ackPromises.current.has(requestId)) {
+                //             ackPromises.current.delete(requestId);
+                //             reject(new Error("ACK not received within timeout"));
+                //         }
+                //     }, 10000); // 10초 타임아웃
+                // });
+
                 socket.send(JSON.stringify(pathData));
             } catch (error) {
                 console.error("Unexpected error while loading waypoints from database:", error);
@@ -4705,7 +4718,7 @@ ${waypointsYamlStr}
         function startReverseNavigation(pathId) {
             if (!isSocketInitialized) {
             }
-            sendAllWaypoints(pathId, true); // 역방향 Waypoints 전송을 위한 플래그 추가
+            sendAllWaypoints(pathId,commandType=0, reverse=true); // 역방향 Waypoints 전송을 위한 플래그 추가
         }
 
         // 특정 Path ID로 Waypoints를 불러와 지도에 표시
