--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -980,12 +980,6 @@
     </div>
 
 
-    <script type="module">
-        import { v4 as uuidv4 } from './node_modules/uuid/dist/esm-browser/index.js';
-      
-        console.log(uuidv4());
-    </script>
-
 
     <script>
 
@@ -4235,14 +4229,14 @@ ${waypointsYamlStr}
                 const connectionId = matchedRobotData.connection_id;
                 let pathData ={};
 
-                // const uuidv4 = (() => {
-                //     // UUID 생성 로직 간단 구현
-                //     return () => 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, function(c) {
-                //     const r = (Math.random() * 16) | 0;
-                //     const v = c === 'x' ? r : (r & 0x3) | 0x8;
-                //     return v.toString(16);
-                //     });
-                // })();
+                const uuidv4 = (() => {
+                    // UUID 생성 로직 간단 구현
+                    return () => 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, function(c) {
+                    const r = (Math.random() * 16) | 0;
+                    const v = c === 'x' ? r : (r & 0x3) | 0x8;
+                    return v.toString(16);
+                    });
+                })();
                 const requestId = uuidv4();
 
                 if(reverse){
