--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -830,7 +830,7 @@
     <div id="robotListPopup" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: white; border: 1px solid black; padding: 20px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
         <h3>Robot List</h3>
         <ul id="robotList"></ul>
-        <button onclick="closeRobotListPopup()">Close</button>
+        <!-- <button onclick="closeRobotListPopup()">Close</button> -->
     </div>
 
     <!-- Waypoint 목록 -->
