--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -4344,7 +4344,7 @@ ${waypointsYamlStr}
                     .from('Path')
                     .insert({
                         name: reversePathName,
-                        robotId: selectedRobotId,
+                        robotId: robotDbId,
                         description: "Automatically generated reverse path",
                         color: "blue", // 필요 시 색상 지정
                         type: 0 // Path 타입 지정
